[gd_scene load_steps=6 format=3 uid="uid://bju67ey0myd2f"]

[ext_resource type="FontFile" uid="uid://ct1o26rpsdb2" path="res://_assets/fonts/pixel-loot.ttf" id="1_0ices"]
[ext_resource type="Script" uid="uid://5bi086md70tu" path="res://_globals/gui/game_menu/current_equip_button.gd" id="1_3b2o2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ices"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 1.0
content_margin_bottom = 0.0
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3b2o2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mnvkg"]

[node name="CurrentEquipButton" type="PanelContainer"]
offset_right = 148.0
offset_bottom = 9.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0ices")
script = ExtResource("1_3b2o2")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_3b2o2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3b2o2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3b2o2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3b2o2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3b2o2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="TitleContainer" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_mnvkg")

[node name="TitleLabel" type="Label" parent="HBoxContainer/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0ices")
theme_override_font_sizes/font_size = 7
text = "Main Hand"

[node name="EquipmentTitleContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_mnvkg")

[node name="EquipmentLabel" type="Label" parent="HBoxContainer/EquipmentTitleContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("1_0ices")
theme_override_font_sizes/font_size = 7
text = "SUPER GOOD WEAPON"
